--- a/lab/templates/student.html
+++ b/lab/templates/student.html
@@ -10,9 +10,11 @@
 	Student Id: {{student.student_id}}<br>
 	Class: {{student.year}}<br>
 	Finished Lab: {{student.finished_lab}}
-	<p>
-	<form>
+	</p>
+
+	<form action='/delete/{{student.student_id}}' method = "POST">
 		<input type="submit" value="delete" >
+		<p>test</p>
 
 
 	</form>	
